--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "archiver": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
@@ -23,6 +24,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "sharp": "^0.33.5",
+    "unzipper": "^0.12.3",
+    "xml2js": "^0.6.2"
   }
 }
